--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-toastify": "^6.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -45,6 +46,7 @@
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
+    "react-loader-spinner": "^3.1.14",
     "uuid": "^8.3.2",
     "webpack-cli": "^4.2.0"
   }
